--- a/css/styles.css
+++ b/css/styles.css
@@ -4,22 +4,10 @@ Homepage css styles
 
 #container {
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  /* grid-template-rows: 500px 500px 500px 500px; */
-  /* grid-template-rows: 100vh 1fr 1fr 1fr; */
-  /* grid-template-rows: 80vh 1fr 1fr 1fr; */
-  /* grid-template-rows: 100vh 500px 500px 500px; */
+  /* grid-auto-rows: minmax(min-content, max-content); */
+  grid-template-rows: repeat(4, auto);
   grid-template-columns: 1fr;
 }
-
-/*
-@media (min-width: 640px) {
-  #container {
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-columns: 1fr;
-  }
-}
-*/
 
 body {
   margin: 0;
@@ -36,7 +24,9 @@ body {
     #373b44,
     #73c8a9
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  /* font-size: 1.2em; */
+}
+p {
+  font-size: 1em;
 }
 
 :root {
